# mixar-project

./: CMakeLists.txt
include/: BlurNode.h  BrightnessNode.h  Graph.h  GrayscaleNode.h  ImageInputNode.h  ImageOutputNode.h  Node.h  NodeGraph.h
src/: BlurNode.cpp  BrightnessNode.cpp  GrayscaleNode.cpp  ImageInputNode.cpp  ImageOutputNode.cpp  NodeGraph.cpp  main.cpp
